Added some placeholder routes on ruby side.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,11 @@
   </head>
 
   <body>
+    <div>
+      <a href="/">Home</a>
+      <a href="/static_pages/about">About</a>
+    </div>
+
     <%= yield %>
   </body>
 </html>
