--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,10 +9,12 @@
   </head>
 
   <body>
-    <div>
-      <a href="/">Home</a>
-      <a href="/static_pages/about">About</a>
-    </div>
+    <header class="navbar">
+      <section class="navbar-section">
+        <a href="/" class="btn btn-link">Home</a>
+        <a href="/static_pages/about" class="btn btn-link">About</a>
+      </section>
+    </header>
 
     <%= yield %>
   </body>
